# seer-export-audit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  README.zh-CN.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: tests.yml
examples/: synthetic_dictionary.dic  synthetic_export.txt
src/seer_export_audit/: __init__.py  audit.py  cli.py  report.py
tests/: test_audit.py
