[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "seer-export-audit"
version = "0.1.0"
description = "Privacy-conscious quality control for delimited registry exports and data dictionaries."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "seer-export-audit contributors"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
seer-export-audit = "seer_export_audit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.unittest]
start-directory = "tests"
